# hareem_hackathon_II_Phase_03

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT.md.bak  README.md  STATUS.md  speckit.constitution  speckit.plan  speckit.specify  speckit.tasks
backend/: .env.example  .gitignore  AGENT_FALLBACK_FIX.md  AGENT_SETUP_SUMMARY.md  OPENAI_AGENTS_CONFIG.md  QUICK_REFERENCE.md  README.md  VALIDATION.md  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/agent/: __init__.py  config.py  service.py
backend/app/mcp/: __init__.py  client.py  errors.py  mcp_server.py  server.py
backend/app/mcp/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
backend/app/models/: __init__.py  conversation.py  message.py  task.py
backend/app/routes/: __init__.py  chat.py
backend/app/schemas/: __init__.py  chat.py
backend/tests/: conftest.py  test_mcp_tools.py  test_message_windowing.py
frontend/: .env.local.example  FEATURES.md  FRONTEND.md  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page-new.tsx  page.tsx
frontend/app/components/: ConversationInfo.tsx  Sidebar.tsx  ToolCallDisplay.tsx
frontend/src/types/: chatscope.d.ts
specs/api/: mcp-tools.md
specs/features/: chatbot.md
